--- a/styles/content.css
+++ b/styles/content.css
@@ -51,3 +51,18 @@ input[type=text], input[type=number]{
     align-items: center;
     
 }
+ select{
+    width: 200px;
+    height: 30px;
+    text-align: center;
+    border-radius: 12px;
+ }
+ option{
+background-color: ;
+
+ }
+
+ option:hover{
+    background-color: black;
+    color: white;
+ }
