--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -25,7 +25,7 @@
     text-align: center;
     word-spacing: 45px;
     background-color: black;
-    height: 60px;
+    height: 75px;   
     box-shadow: 0.1em 0.1em 0.2em black;
 
 }
@@ -70,10 +70,39 @@ li{
 }
 
 footer{
-    bottom: 0;
-    position: fixed;
+    margin-bottom: 0;
+    position: absolute;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+
+    #imgPrincipal{
+        width: 85px;
+        height: 70px;
+    }
+    #name{
+        margin-top: 55px;
+        font-size: 65px;
+        color: rgba(37,76,11,255);    
+        -webkit-text-stroke: 1px;
+        -webkit-text-stroke-color: white;
+    }
+    
+    li{
+        display: block;
+        margin: 5px;
+        font-size: 20px;
+    }
+
+    #footer{
+
+    }
+
+    #navi{
+        height: 150px;
+    }
 }
