--- a/Asp.Net/ProjetoMVC/Views/Shared/_Layout.cshtml
+++ b/Asp.Net/ProjetoMVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contato" asp-action="GetFirstContato">Primeiro contato</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
