--- a/Asp.Net/AgendaMVC/Views/Contato/Create.cshtml
+++ b/Asp.Net/AgendaMVC/Views/Contato/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Fone" class="control-label"></label>
-                <input asp-for="Fone" class="form-control" />
+                <input asp-for="Fone" class="form-control" placeholder="(xx)xxxxx-xxxx" />
                 <span asp-validation-for="Fone" class="text-danger"></span>
             </div>
             <div class="form-group">
