--- a/Asp.Net/AulaEntity/Views/Compromisso/Details.cshtml
+++ b/Asp.Net/AulaEntity/Views/Compromisso/Details.cshtml
@@ -16,17 +16,23 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descricao)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Data)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Data)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Contato)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Contato.Id)
+            @Html.DisplayFor(model => model.Contato)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Local)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Local.Id)
+            @Html.DisplayFor(model => model.Local)
         </dd>
     </dl>
 </div>
