--- a/Asp.Net/AulaEntity/Views/Compromisso/Edit.cshtml
+++ b/Asp.Net/AulaEntity/Views/Compromisso/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Data" class="control-label"></label>
+                <input asp-for="Data" class="form-control" />
+                <span asp-validation-for="Data" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ContatoId" class="control-label"></label>
                 <select asp-for="ContatoId" class="form-control" asp-items="ViewBag.ContatoId"></select>
                 <span asp-validation-for="ContatoId" class="text-danger"></span>
